[package]
name = "gbe-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
gbe-jobs-domain = { path = "../gbe-nexus/crates/jobs-domain" }
gbe-nexus = { path = "../gbe-nexus/crates/nexus" }
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
